PROJECT(hhuo)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb -pthread -std=c++11")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -pthread -std=c++11")

# include directories
INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
    /usr/local/include
    /usr/include
)

# lib directories
LINK_DIRECTORIES(
    ${PROJECT_BINARY_DIR}/lib
    /usr/local/lib
    /usr/lib
)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# openssl option
FIND_PACKAGE(OpenSSL REQUIRED)
MESSAGE(STATUS "OpenSSL include: ${OPENSSL_INCLUDE_DIR}")
MESSAGE(STATUS "OpenSSL lib: ${OPENSSL_LIBRARIES}")
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENSSL_LIBRARIES})
OPTION(USESSL "Enable use openssl" OFF)
IF(USESSL)
    MESSAGE(STATUS "OpenSSL ON")
    ADD_DEFINITIONS(-DHAVE_OPENSSL)
ENDIF()

# http option
OPTION(HTTP "Enable http" OFF)
IF(HTTP)
    MESSAGE(STATUS "Http ON")
    ADD_DEFINITIONS(-DHTTP)
ENDIF()

# websocket option
OPTION(WEBSOCKET "Enable websocket" ON)
IF(WEBSOCKET)
    MESSAGE(STATUS "Websocket ON")
    ADD_DEFINITIONS(-DWEBSOCKET)
ENDIF()

# tcpconnection option
OPTION(TCPCONN "Enable tcpconnection" OFF)
IF(TCPCONN)
    MESSAGE(STATUS "Tcpconnection ON")
    ADD_DEFINITIONS(-DTCPCONN)
ENDIF()

# shortconnection option
OPTION(SHORTCONN "short connection" OFF)
IF(SHORTCONN)
    MESSAGE(STATUS "Short Connection")
    ADD_DEFINITIONS(-DSHORT_CONN)
ENDIF()

# add subdirs
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(unittests)