PROJECT(hhuo)

FILE(GLOB HHUO_SRCS net/*.cpp parser/*.cpp utils/*.cpp)

# shared library
ADD_LIBRARY(hhuo SHARED ${HHUO_SRCS})

# static library
ADD_LIBRARY(hhuo_static STATIC ${HHUO_SRCS})
SET_TARGET_PROPERTIES(hhuo_static PROPERTIES OUTPUT_NAME "hhuo")
set_target_properties(hhuo_static PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(hhuo PROPERTIES CLEAN_DIRECT_OUTPUT 1)
set_target_properties(hhuo PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(hhuo_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)