PROJECT(hhuo)

FILE(GLOB HHUO_SRCS net/*.cpp parser/*.cpp utils/*.cpp)

# find ssl
FIND_PACKAGE(OpenSSL REQUIRED)

# add ssl
INCLUDE_DIRECTORIES(thridparty)

# shared library
ADD_LIBRARY(hhuo SHARED ${HHUO_SRCS})
SET_TARGET_PROPERTIES(hhuo PROPERTIES OUTPUT_NAME "hhuo")
SET_TARGET_PROPERTIES(hhuo PROPERTIES CLEAN_DIRECT_OUTPUT 1)
set_target_properties(hhuo PROPERTIES LINKER_LANGUAGE CXX)

#link ssl
TARGET_LINK_LIBRARIES(hhou)