PROJECT(hhuo)

set(HHUO_SRCS HH_FDEvent.cpp)

# shared library
ADD_LIBRARY(hhuo SHARED ${HHUO_SRCS})

# static library
ADD_LIBRARY(hhuo_static STATIC ${HHUO_SRCS})
SET_TARGET_PROPERTIES(hhuo_static PROPERTIES OUTPUT_NAME "hhuo")
SET_TARGET_PROPERTIES(hhuo PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hhuo_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)