PROJECT(${PARSER})

#add headers
INCLUDE_DIRECTORIES(
    ../../include
    ../../include/parser
    ../../include/utils
)

# add src
AUX_SOURCE_DIRECTORY(. HHPARSER_SRC)

# static library
ADD_LIBRARY(${PARSER} STATIC ${HHPARSER_SRC})
SET_TARGET_PROPERTIES(${PARSER} PROPERTIES OUTPUT_NAME ${PARSER})
SET_TARGET_PROPERTIES(${PARSER} PROPERTIES LINKER_LANGUAGE CXX)

#add log
TARGET_LINK_LIBRARIES(${PARSER})